all pages content and name fixed

--- a/allcourse.html
+++ b/allcourse.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KeepGoing</title>
 </head>
 <body>
 <div class="container">
@@ -23,10 +23,10 @@
         </div>
     </a>
 
-    <a class="profile-link" href="user_dashboard.html">
+    <a class="profile-link" href="/user_dashboard.html">
         <div class="profile">
-            <img src="images/courses-images/programmer-cat.jpg" alt="">
-            <h2>User Name</h2>
+            <img src="/images/courses-images/programmer-cat.jpg" alt="">
+            <h2>Alice</h2>
             <p>programming2020ss@gmail.com</p>
         </div>
     </a>
@@ -64,7 +64,7 @@
     <div class="course--container">
         <div class="course--list">
             <h1>All Courses: </h1>
-            <a href="#">
+            <a href="tutorial_python.html">
                 <div class="course">
                     <img class="course--img" src="/images/courses-images/oop_python.png" alt="">
                     <div class="course--content">
@@ -74,7 +74,7 @@
                     </div>        
                 </div>
             </a>
-            <a href="#">
+            <a href="tutorial_computer_science.html">
                 <div class="course">
                     <img class="course--img" src="/images/courses-images/computerscience.png" alt="">
                     <div class="course--content">
@@ -84,7 +84,7 @@
                     </div>        
                 </div>
             </a>
-            <a href="#">
+            <a href="tutorial_english.html">
                 <div class="course">
                     <img class="course--img" src="/images/courses-images/english.png" alt="">
                     <div class="course--content">
@@ -94,7 +94,7 @@
                     </div>        
                 </div>
             </a>
-            <a href="#">
+            <a href="tutorial_discrete_mathematics.html">
                 <div class="course">
                     <img class="course--img" src="/images/courses-images/mathematics.png" alt="">
                     <div class="course--content">
@@ -114,7 +114,7 @@
                     </div>        
                 </div>
             </a>
-            <a href="#">
+            <a href="tutorial_robotics.html">
                 <div class="course">
                     <img class="course--img" src="/images/courses-images/robotics.png" alt="">
                     <div class="course--content">
