--- a/tutorial_robotics.html
+++ b/tutorial_robotics.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>KeepGoing</title>
   </head>
   <body>
     <div class="app">
@@ -27,7 +27,7 @@
         <a class="profile-link" href="user_dashboard.html">
           <div class="profile">
             <img src="images/courses-images/programmer-cat.jpg" alt="" />
-            <h2>User Name</h2>
+            <h2>Alice</h2>
             <p>programming2020ss@gmail.com</p>
           </div>
         </a>
@@ -65,32 +65,23 @@
             <div class="tutorial--author">
               <div class="author-profile">
                 <img src="/images/courses-images/programmer-cat.jpg" alt="" />
-                <p>Author <span>Pyae Hein</span></p>
+                <p>Author <span>Alex Davaci</span></p>
               </div>
               <a class="btn" href="#">NEXT CHAPTER</a>
             </div>
 
 
           <div class="tutorial--description">
-            <h2>Title</h2>
+            <h2>Even basic electricity can be commplicated and fun</h2>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              quas enim quis dolore, sit voluptate molestiae cupiditate modi
-              facere quasi est ducimus quod officia quam? Commodi provident
-              aliquam voluptates odio! Molestias officiis corporis harum eveniet
-              eius, est consectetur architecto nisi ullam similique velit porro
-              voluptatibus mollitia. Minima eius maxime quidem quisquam adipisci
-              repellendus eum nihil! Autem, mollitia. Quisquam, quam tempora.
+              Robotics is an interdisciplinary branch of
+               computer science and engineering.
+                Robotics involves the design, construction,
+                 operation, and use of robots. The goal of
+                  robotics is to design machines 
+                 that can help and assist humans.
             </p>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              quas enim quis dolore, sit voluptate molestiae cupiditate modi
-              facere quasi est ducimus quod officia quam? Commodi provident
-              aliquam voluptates odio! Molestias officiis corporis harum eveniet
-              eius, est consectetur architecto nisi ullam similique velit porro
-              voluptatibus mollitia. Minima eius maxime quidem quisquam adipisci
-              repellendus eum nihil! Autem, mollitia. Quisquam, quam tempora.
-            </p>
+           
           </div>
           <div class="tutorial--btn--group">
             <p class="active">Attach Files</p>
@@ -99,10 +90,10 @@
             <p>More</p>
           </div>
 
-          <div class="attach-files">
-            <p><img src="/images/home/courses.svg" alt="" /> setup.html</p>
-            <p><img src="/images/home/courses.svg" alt="" /> setup.style.css</p>
-          </div>
+          <!-- <div class="attach-files">
+            <p><img src="/images/tools/file.svg" alt="" /> setup.txt</p>
+            <p><img src="/images/tools/python.svg" alt="" /> intro.py</p>
+          </div> -->
 
           </div>
         </div>
@@ -113,102 +104,106 @@
           <div class="module--list">
 
             <div class="module-1">
-              <h3>Introduction</h3>
+              <h3>Even basic electricity can be complicated and fun</h3>
               <div class="tutorial-1">
                 <img src="/images/tools/correct.svg" alt="">
-                <p>Introduction</p>
-                <p>10:00</p>
+                <p>Introduction to Robotics</p>
+                <p>05:29</p>
               </div>
               <div class="tutorial-1 active">
                 <img src="/images/tools/pause.svg" alt="">
-                <p>How Internet Works</p>
-                <p>10:00</p>
+                <p> DC electricity and Ac electricity</p>
+                <p>5:00</p>
               </div>
               <div class="tutorial-1">
                 <img src="/images/tools/play.svg" alt="">
-                <p>What we use HTML?</p>
-                <p>10:00</p>
+                <p>Ohm's law and power
+                </p>
+                <p>02:16</p>
+              </div>
+              <div class="tutorial-1">
+                <img src="/images/tools/play.svg" alt="">
+                <p>Resistor
+                </p>
+                <p>03:56</p>
+              </div>
+              <div class="tutorial-1">
+                <img src="/images/tools/play.svg" alt="">
+                <p>Variable resistor
+                </p>
+                <p>02:57</p>
+              </div>
+              <div class="tutorial-1">
+                <img src="/images/tools/play.svg" alt="">
+                <p>Diodes and LED
+                </p>
+                <p>08:16</p>
+              </div>
+
+
+              <div class="tutorial-1">
+                <img src="/images/tools/play.svg" alt="">
+                <p>Introduction to Robotics parts</p>
+                <p>04:57</p>
+              </div>
+              <div class="tutorial-1">
+                <img src="/images/tools/play.svg" alt="">
+                <p>Servo motors and controller circuit
+                </p>
+                <p>12:26</p>
+              </div>
+              <div class="tutorial-1">
+                <img src="/images/tools/play.svg" alt="">
+                <p>LM386 Audio amplifier
+                </p>
+                <p>05:47</p>
               </div>
 
               <div class="tutorial-1">
                 <img src="/images/tools/play.svg" alt="">
-                <p>Setting up editor</p>
-                <p>10:00</p>
-              </div>
-            </div>
-            <div class="module-1">
-              <h3>Introduction</h3>
-              <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>Introduction</p>
-                <p>10:00</p>
+                <p>The H-bridge
+                </p>
+                <p>17:09</p>
               </div>
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>How Internet Works</p>
-                <p>10:00</p>
+                <img src="/images/tools/play.svg" alt="">
+                <p>Transistor amplifiers, Part I
+                </p>
+                <p>05:10</p>
               </div>
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>What we use HTML?</p>
-                <p>10:00</p>
+                <img src="/images/tools/play.svg" alt="">
+                <p>Transistor amplifiers, Part II
+                </p>
+                <p>04:31</p>
               </div>
 
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>Setting up editor</p>
-                <p>10:00</p>
-              </div>
-            </div>
-            <div class="module-1">
-              <h3>Introduction</h3>
-              <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>Introduction</p>
-                <p>10:00</p>
+                <img src="/images/tools/play.svg" alt="">
+                <p>Transistor amplifiers, Part III
+                </p>
+                <p>02:51</p>
               </div>
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>How Internet Works</p>
-                <p>10:00</p>
+                <img src="/images/tools/play.svg" alt="">
+                <p>Dual power supplies and that mysterious ground
+                </p>
+                <p>13:32</p>
               </div>
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>What we use HTML?</p>
-                <p>10:00</p>
+                <img src="/images/tools/play.svg" alt="">
+                <p>Sensors Part I
+
+                </p>
+                <p>13:44</p>
               </div>
 
               <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>Setting up editor</p>
-                <p>10:00</p>
+                <img src="/images/tools/play.svg" alt="">
+                <p>Sensors Part II
+                </p>
+                <p>16:25</p>
               </div>
-            </div>
-            <div class="module-1">
-              <h3>Introduction</h3>
-              <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>Introduction</p>
-                <p>10:00</p>
-              </div>
-              <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>How Internet Works</p>
-                <p>10:00</p>
-              </div>
-              <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>What we use HTML?</p>
-                <p>10:00</p>
-              </div>
-
-              <div class="tutorial-1">
-                <img src="/images/home/courses.svg" alt="">
-                <p>Setting up editor</p>
-                <p>10:00</p>
-              </div>
-            </div>
-
 
                 
           </div>
