--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KeepGoing</title>
 </head>
 <body>
     <div class="app">
@@ -28,7 +28,7 @@
             <a class="profile-link" href="user_dashboard.html">
               <div class="profile">
                 <img src="images/courses-images/programmer-cat.jpg" alt="" />
-                <h2>User Name</h2>
+                <h2>Alice</h2>
                 <p>programming2020ss@gmail.com</p>
               </div>
             </a>
@@ -62,31 +62,31 @@
               <div class="card--group">
                 <div class="card">
                   <div class="card-content">
-                    <img src="/images/tools/complete.svg" alt="">
+                    <img src="/images/tools/progress.svg" alt="">
                     <p>Course In Progress</p>
                   </div>
-                  <h1>20</h1>
+                  <h1>43</h1>
                 </div>
                 <div class="card">
                   <div class="card-content">
                     <img src="/images/tools/complete.svg" alt="">
-                    <p>Course In Progress</p>
+                    <p>Course Completed</p>
                   </div>
-                  <h1>20</h1>
+                  <h1>1</h1>
                 </div>
                 <div class="card">
                   <div class="card-content">
-                    <img src="/images/tools/complete.svg" alt="">
-                    <p>Course In Progress</p>
+                    <img src="/images/tools/certificate.svg" alt="">
+                    <p>Certificate Earned</p>
                   </div>
-                  <h1>20</h1>
+                  <h1>1</h1>
                 </div>
                 <div class="card">
                   <div class="card-content">
-                    <img src="/images/tools/complete.svg" alt="">
-                    <p>Course In Progress</p>
+                    <img src="/images/tools/time.svg" alt="">
+                    <p>Activity Hours</p>
                   </div>
-                  <h1>20</h1>
+                  <h1>90</h1>
                 </div>
                 
               </div>
@@ -106,38 +106,38 @@
 
                 <div class="course-info">
                   <div class="card-content">
-                    <img src="/images/tools/complete.svg" alt="">
-                    <p>Object Oriented Programming</p>
+                    <img src="/images/courses-images/oop_python.png" alt="">
+                    <p>Object Oriented Programming In Python</p>
                   </div>
                   <p>18/40(48%)</p>
                   <p>24h 13m 28s</p>
                   <div class="instructor">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
-                    <p>Pyae Hein</p>
+                    <img src="/images/tools/teacher.svg" alt="">
+                    <p>Kurt David</p>
                   </div>
                 </div>
                 <div class="course-info">
                   <div class="card-content">
-                    <img src="/images/tools/complete.svg" alt="">
-                    <p>Object Oriented Programming</p>
+                    <img src="/images/courses-images/computerscience.png" alt="">
+                    <p>Introduction To Computer Science</p>
                   </div>
                   <p>18/40(48%)</p>
                   <p>24h 13m 28s</p>
                   <div class="instructor">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
-                    <p>Pyae Hein</p>
+                    <img src="/images/tools/teacher.svg" alt="">
+                    <p>Alex Davaci</p>
                   </div>
                 </div>
                 <div class="course-info">
                   <div class="card-content">
-                    <img src="/images/tools/complete.svg" alt="">
-                    <p>Object Oriented Programming</p>
+                    <img src="/images/courses-images/english.png" alt="">
+                    <p>Learn English From Beginner to Advanced</p>
                   </div>
                   <p>18/40(48%)</p>
                   <p>24h 13m 28s</p>
                   <div class="instructor">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
-                    <p>Pyae Hein</p>
+                    <img src="/images/tools/teacher.svg" alt="">
+                    <p>David Lycan</p>
                   </div>
                 </div>
 
@@ -151,7 +151,7 @@
               <div class="recommended-card-group">
                 <a href="">
                   <div class="recommended-card">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img src="/images/courses-images/frontend.png" alt="">
                     <p><span>Programming</span></p>
                     <p>Front-end Development</p>
                     <p>30 Lessons | 83 Hours</p>
@@ -159,18 +159,18 @@
                 </a>
                 <a href="">
                   <div class="recommended-card">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img src="/images/courses-images/backend.png" alt="">
                     <p><span>Programming</span></p>
-                    <p>Front-end Development</p>
-                    <p>30 Lessons | 83 Hours</p>
+                    <p>Backend Programming</p>
+                    <p>109 Lessons | 79 Hours</p>
                   </div>
                 </a>
-                <a href="">
+                <a href="tutorial_computer_science.html">
                   <div class="recommended-card">
-                    <img src="/images/courses-images/programmer-cat.jpg" alt="">
+                    <img src="/images/courses-images/mathematics.png" alt="">
                     <p><span>Programming</span></p>
-                    <p>Front-end Development</p>
-                    <p>30 Lessons | 83 Hours</p>
+                    <p>Learn Discrete Mathematics</p>
+                    <p>55 Lessons | 23 Hours</p>
                   </div>
                 </a>
                 
