--- a/allcourse.html
+++ b/allcourse.html
@@ -12,7 +12,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KeepGoing</title>
+    <link rel="icon" type="image/png" href="square.svg"/>
 </head>
+
 <body>
 <div class="container">
         
@@ -104,16 +106,7 @@
                     </div>        
                 </div>
             </a>
-            <a href="#">
-                <div class="course">
-                    <img class="course--img" src="/images/courses-images/frontend.png" alt="">
-                    <div class="course--content">
-                        <p>Programming <span>Dec 29, 2022</span></p>
-                        <h1>Learn Frontend Technologies to Build your Own Website</h1>
-                        <p>69 Lessons <span>30.5 hrs</span></p>
-                    </div>        
-                </div>
-            </a>
+
             <a href="tutorial_robotics.html">
                 <div class="course">
                     <img class="course--img" src="/images/courses-images/robotics.png" alt="">
@@ -137,37 +130,37 @@
 
 
         <section class="recent--publish">
-            <h2>Recent Release:</h2>
+            <h2>Upcoming Courses:</h2>
             <div class="course--group">
                 <div class="course-card">
                     <img src="/images/courses-images/backend.png" alt="">
                     <div class="course--content-card">
-                        <p>Programming <span>Jun 27, 2023</span></p>
+                        <p>Programming</p>
                         <h1>Learn Backend Technologies</h1>
                         <p>77 Lessons <span>52 hrs</span></p>
                     </div>
                 </div>
-                <div class="course-card">
-                    <img src="/images/courses-images/oop_python.png" alt="">
+                <div class="course-card"> 
+                    <img src="/images/courses-images/frontend.png" alt="">
                     <div class="course--content-card">
-                        <p>Programming <span>Feb 09, 2023</span></p>
-                        <h1>Object Oriented Programming In Python</h1>
-                        <p>47 Lessons <span>20 hrs</span></p>
-                    </div>
+                        <p>Programming</p>
+                        <h1>Learn Frontend Technologies</h1>
+                        <p>69 Lessons <span>30.5 hrs</span></p>
+                    </div>     
                 </div>
                 <div class="course-card">
-                    <img src="/images/courses-images/computerscience.png" alt="">
+                    <img src="/images/courses-images/js.png" alt="">
                     <div class="course--content-card">
-                        <p>Programming <span>Oct 09, 2022</span></p>
-                        <h1>Introduction to Computer Science</h1>
+                        <p>Programming</p>
+                        <h1>JavaScript For Web Development</h1>
                         <p>77 Lessons <span>16 hrs</span></p>
                     </div>
                 </div>
                 <div class="course-card">
-                    <img src="/images/courses-images/mathematics.png" alt="">
+                    <img src="/images/courses-images/unity.png" alt="">
                     <div class="course--content-card">
-                        <p>Programming <span>Oct 09, 2023</span></p>
-                        <h1>Learn Discrete Mathematics</h1>
+                        <p>Programming</p>
+                        <h1>Game Development with Unity</h1>
                         <p>81 Lessons <span>42 hrs</span></p>
                     </div>
                 </div>
