--- a/plan.html
+++ b/plan.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day - 3</title>
+    <link rel="icon" type="image/png" href="square.svg"/>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
             <div class="plan-card">
                 <div class="plan-title">
                     <input type="radio" value="Standard" name="plan">
-                    <h3>Monthly</h3>
+                    <h3>Monthly $39.99</h3>
                 </div>
                 <div class="plan-description">
                     <p>Learn your favourite subject in short term 
@@ -33,7 +34,7 @@
             <div class="plan-card">
                 <div class="plan-title">
                     <input type="radio" value="Advanced" name="plan">
-                    <h3>Annual</h3>
+                    <h3>Annual $390.99</h3>
                 </div>
                 <div class="plan-description">
                     The best plan to improve to your skill to next level. Be Professional, be active,
@@ -62,7 +63,7 @@
         </div>
 
         <div class="confirm-section">
-            <p class="btn-1">Start free trail</p>
+            <p class="btn-1">Start Subscribe</p>
             <p class="btn-2">Money Back Guarantee</p>
         </div>
     </div>
