--- a/register.html
+++ b/register.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KeepGoing</title>
+    <link rel="icon" type="image/png" href="square.svg"/>
 </head>
 <body>
     <a class="logo--link" href="index.html">
